Document z-index fix
Fix z-index of all elements

--- a/css/style.scss
+++ b/css/style.scss
@@ -79,11 +79,9 @@ html {
 }
 
 #landing-page {
-  position: relative;
   width: 100%;
   height: 100vh;
   background: var(--grey);
-  z-index: 9999;
 
   @keyframes fade-in {
     from {
@@ -462,12 +460,12 @@ html {
       position: relative;
       top: 0;
       left: 0;
-      z-index: 50;
+      z-index: 2;
 
       .nav-hamburger {
+        position: fixed;
         width: 50px;
         height: 34px;
-        position: fixed;
         top: 18px;
         right: 20px;
         display: flex;
@@ -476,7 +474,7 @@ html {
         cursor: pointer;
         opacity: 0;
         transition: opacity 0.4s ease-in-out;
-        z-index: 99999;
+        z-index: 11;
 
         .bar {
           width: 100%;
@@ -518,7 +516,7 @@ html {
         height: 70px;
         width: 100%;
         background-color: var(--grey);
-        z-index: 9999;
+        z-index: 10;
         transition: all 0.4s ease-in-out;
 
         .small-logo-container {
@@ -607,6 +605,7 @@ html {
         background-color: var(--grey);
         transition: all 0.3s ease-in-out;
         overflow: hidden;
+        z-index: 9;
 
         .dropdown-shape {
           position: absolute;
@@ -734,7 +733,7 @@ html {
         text-align: center;
         padding-top: 1rem;
         transition: all 0.3s ease-in-out; /* not how i want transition to happen */
-        z-index: 7;
+        z-index: 0;
       }
 
       .section-paragraph {
@@ -881,7 +880,7 @@ html {
           width: 100%;
           height: 0;
           padding-top: 56.25%;
-          z-index: 5;
+          z-index: 0;
           background: var(--green);
 
           img {
@@ -981,6 +980,7 @@ html {
             0 4rem
           );
           transition: margin 0.3s ease-in-out;
+          z-index: -1;
 
           .blurb-text {
             position: absolute;
@@ -1370,7 +1370,7 @@ html {
             width: 28rem;
             height: 15.75rem;
             padding: 0;
-            margin: 0 auto;
+            margin: 0 auto 2rem;
 
             .project-blurb {
               font-size: 1rem;
